# nestle-text

./: .gitignore  LICENSE  README.md  nestle-text.nestle.toml  pyproject.toml
src/nestle_text/: nestle.py  unnestle.py
tests/nestle/: root_directory.nestle.toml
tests/nestle/root_directory/folder_a/folder_b/: .env.example
tests/nestle/root_directory/python_package/: python_source_file.py
tests/unnestle/: example.nestle.toml
tests/unnestle/example/: LICENSE.txt  README.md
tests/unnestle/example/src/utils/datetimes/: timezone_helpers.py
